--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 /.next/
 /out/
 
+drizzle
+
 # production
 /build
 
@@ -34,7 +36,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
 
 # vercel
 .vercel
