--- a/package.json
+++ b/package.json
@@ -11,12 +11,8 @@
     "db-migrate": "npx drizzle-kit migrate"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "drizzle-orm": "^0.36.3",
-    "next": "15.0.3",
-    "next-auth": "^4.24.10",
-    "pg": "^8.13.1",
     "@hookform/resolvers": "^3.9.1",
+    "@neondatabase/serverless": "^0.10.3",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -28,10 +24,15 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.36.3",
     "lucide-react": "^0.460.0",
+    "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.4.3",
+    "postgres": "^3.4.5",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
