--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
       "@/*": ["./src/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.mjs"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.mjs", "src/lib/firebase-messaging-sw.js"],
   "exclude": ["node_modules"]
 }
